updated docs for rgyers contribution

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,32 @@
-== Usage
+= DESCRIPTION:
+
+Base recipes used to setup services used by the RightScale Cloud Management Platform
+
+= USAGE:
+
 Run the rs_utils::default recipe to enable monitoring and logging 
 on the RightScale Dashboard for any RightLink enable image.
+
+= DEFINITIONS
+
+rs_utils_enable_collectd_plugin
+---------------------------------------------
+* Accepts only one parameter "name" which is the name of the collectd plugin to enable
+* The plugin name is added to node[:rs_utils][:plugin_list_ary] which is used to create the list of plugins in the /etc/collectd/collectd.conf file
+* The node[:rs_utils][:plugin_list_ary] will have any plugins listed in node[:rs_utils][:plugin_list] merged into it.  This is to support any legacy recipes as well as allow the input to be manipulated in the RS dashboard.
+
+Syntax:
+
+```rs_utils_enable_collectd_plugin "curl_json"```
+
+
+rs_utils_monitor_process
+------------------------------------
+* Accepts only one parameter, "name" which is the name of the process to monitor
+* The process name is added to node[:rs_utils][:process_list_ary] which is used to create the list of processes in the /etc/collectd/conf/processes.conf file
+* The node[:rs_utils][:process_list_ary] will have any processes listed in node[:rs_utils][:process_list] merged into it.  This is to support any legacy recipes as well as allow the input to be manipulated in the RS dashboard.
+
+Syntax:
+
+```rs_utils_monitor_process "nginx"```
+
