--- a/README.rdoc
+++ b/README.rdoc
@@ -53,3 +53,9 @@ Syntax:
 
 ```rs_utils_marker :start```
 ```rs_utils_marker :end```
+
+= LICENSE
+
+Copyright RightScale, Inc. All rights reserved.  All access and use subject to the
+RightScale Terms of Service available at http://www.rightscale.com/terms.php and,
+if applicable, other agreements such as a RightScale Master Subscription Agreement.
